--- a/files/styles/bottombar.css
+++ b/files/styles/bottombar.css
@@ -40,7 +40,7 @@
     align-items: center;
     color: blue;
     padding: 1.2%;
-    text-decoration: none;
+    /*text-decoration: none;*/
     font-size: 4vh;
     font-family: "pusia";
     border-color: white;
