--- a/files/styles/bottombar.css
+++ b/files/styles/bottombar.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blue;
+    color: white;
     padding: 1.2%;
     text-decoration: none;
     font-size: 8vh;
