--- a/files/styles/bottombar.css
+++ b/files/styles/bottombar.css
@@ -38,7 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blue;
+    color: white;
     padding: 1.2%;
     /*text-decoration: none;*/
     font-size: 4vh;
