--- a/files/styles/bottombar.css
+++ b/files/styles/bottombar.css
@@ -48,7 +48,7 @@
     hyphens: auto;
 }
 
-.bottombar .nko-link {
+.bottombar .nkolink {
     display: flex;
     justify-content: center;
     align-items: center;
