--- a/files/styles/main.css
+++ b/files/styles/main.css
@@ -1,15 +1,386 @@
+/****************** шрифты ******************/
+
+@font-face {
+    font-family: "pusia";
+    src: url("../fonts/pusia-bold.ttf") format("truetype");
+}
+
+.font_pusia {
+    font-family: "pusia";
+}
+
+
+
+/****************** Шапка ******************/
+
+.topbar {
+    display: flex;
+    overflow: hidden;
+    background-color: #1c1f1d;
+    border-radius: 0.8vw;
+}
+
+.topbar a {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 2vw;
+    font-family: "pusia";
+    border-left: 0.4vh dashed;
+    border-right: 0.4vh dashed;
+    border-color: white;
+    overflow-wrap: break-word;
+    hyphens: auto;
+}
+
+.topbar a:hover {
+    -webkit-text-stroke: 0.1vw black;
+    background-color: cyan;
+    /*color: black;*/
+}
+
+.topbar a:last-child {
+    border-right: initial;
+}
+
+.topbar a:first-child {
+    border-left: initial;
+}
+
+.topbar a.active {
+    background-color: #2bd94e;
+    color: white;
+}
+
+
+
+
+/******************* Основтой контент *******************/
+
 .hand {
     cursor: pointer;
 }
 
 .background {
-    background-image: url('../../files/images/background.jpg');
-    background-size: 100% 100%;
-    object-fit: cover;
+    background-image: url('../images/background.jpg');
+    /* background-size:100% 100%; */
+    object-fit:contain;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
 
+.content{
+    display: flex;
+
+    font-size: 3vw;
+
+    box-sizing: content-box;
+    
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+
+    padding: 0 2.9% 1vw 2.9%;
+
+    border: solid 0px;
+    border-radius: 0.8vw;
+
+    background-color: #1c1f1d;
+
+    color: white;
+
+/*    text-align: center;*/
+
+}
+
+.indent {
+    text-indent: 30%;
+}
+
 .center {
     text-align: center;
+}
+
+
+
+
+/******************* Футер *******************/
+
+.bottombar {
+    display: flex;
+    overflow: hidden;
+    background-color: #1c1f1d;
+    border-radius: 0.8vw;
+    flex-direction: column;
+}
+
+.bottombar .discord-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 4.5vw;
+    font-family: "pusia";
+    border-color: white;
+    overflow-wrap: break-word;
+    hyphens: auto;
+}
+
+.bottombar .discord-dd {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 2vw;
+    font-family: "pusia";
+    border-color: white;
+    overflow-wrap: break-word;
+    hyphens: auto;
+}
+
+.bottombar .nko {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 2vw;
+    font-family: "pusia";
+    border-color: white;
+    overflow-wrap: break-word;
+    hyphens: auto;
+}
+
+.bottombar .nkolink {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: blue;
+    padding: 1.2%;
+    font-size: 4vw;
+    font-family: "pusia";
+    border-color: white;
+    overflow-wrap: break-word;
+    hyphens: auto;
+}
+
+.discord-dd{
+    width:500px;
+    height: 600px;
+    font-size: 7vw;
+}
+
+
+
+
+/******************* адаптация *******************/
+
+
+/******* под широкие мониторы *******/
+@media  only screen and (min-width : 1920px) and (max-width : 3840px) {
+
+
+
+    /*** Основтой контент ***/
+
+.background {
+    background-image: url('../images/background.jpg');
+    background-size: 100%;
+}
+
+
+/*** Футер ***/
+.discord-dd{
+    width:950px;
+    height: 1000px;
+    font-size: 7vw;
+}
+
+
+
+}
+
+
+
+
+
+
+
+/******* под планшеты *******/
+@media  only screen and (min-width : 1000px) and (max-width : 1280px) {
+    .background {
+        background-image: url('../images/background.jpg');
+        background-size: cover;
+    }
+    .discord-dd{
+        width: 550px;
+        height: 700px;
+        font-size: 7vw;
+    }
+
+}
+
+@media  only screen and (min-width : 721px) and (max-width : 999px) {
+
+/***Шапка ***/
+.topbar a { 
+        
+        font-size: 4vw;
+    }
+
+     /*** Основной контент ***/
+    .background {
+        background-image: url('../images/background.jpg');
+        background-size: cover;
+    }
+    .content{
+        font-size: 3.5vw;
+    }
+    
+
+
+
+
+/*** Футер ***/
+    .bottombar .discord-text {
+        font-size: 4vw;
+    }
+    
+    .bottombar .discord-dd {
+        font-size: 4vw;
+        
+    }
+    
+    .bottombar .nko {
+        font-size: 4vw;
+        
+    }
+    .bottombar .nkolink {
+        font-size: 4vw;
+        
+    }
+    .discord-dd{
+        width: 350px;
+        height: 500px;
+        font-size: 7vw;
+    }
+}
+
+/******* под смартфоны *******/
+@media  only screen and (min-width : 450px) and (max-width : 720px) {
+    /***Шапка ***/
+.topbar  { 
+    flex-direction: column;
+}
+.topbar a { 
+    font-size: 6vw;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0.4vh dashed;
+}
+
+.topbar a:last-child {
+    border-bottom: initial;
+}
+
+
+
+ /*** Основтой контент ***/
+
+.content{
+    font-size: 5vw;
+}
+
+
+
+
+
+/*** Футер ***/
+.bottombar .discord-text {
+    font-size: 6vw;
+}
+
+.bottombar .discord-dd {
+    font-size: 5vw;
+    
+}
+
+.bottombar .nko {
+    font-size: 5vw;
+    
+}
+.bottombar .nkolink {
+    font-size: 6vw;
+    
+}
+.discord-dd{
+    width: 350px;
+    height: 500px;
+    font-size: 7vw;
+}
+}
+
+
+
+
+
+
+@media  only screen and (min-width : 270px) and (max-width : 449px) {
+    /***Шапка ***/
+.topbar  { 
+    flex-direction: column;
+}
+.topbar a { 
+    font-size: 6vw;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0.4vh dashed;
+}
+
+.topbar a:last-child {
+    border-bottom: initial;
+}
+
+ /*** Основтой контент ***/
+
+.content{
+    font-size: 5vw;
+}
+
+
+
+
+
+/*** Футер ***/
+.bottombar .discord-text {
+    font-size: 6vw;
+}
+
+.bottombar .discord-dd {
+    font-size: 5vw;
+    
+}
+
+.bottombar .nko {
+    font-size: 5vw;
+    
+}
+.bottombar .nkolink {
+    font-size: 6vw;
+    
+}
+.discord-dd{
+    width: 250px;
+    height: 400px;
+    font-size: 7vw;
+}
 }
