--- a/files/styles/main.css
+++ b/files/styles/main.css
@@ -89,11 +89,11 @@
     border: solid 0px;
     border-radius: 0.8vw;
 
-    background-color: #1c1f1d;
+    background-color: rgba(28, 31, 29, 0.8);
+
+    backdrop-filter: blur(4px);
 
     color: white;
-
-/*    text-align: center;*/
 
 }
 
