--- a/files/styles/main.css
+++ b/files/styles/main.css
@@ -10,6 +10,12 @@
 }
 
 
+/*******************************************/
+
+html, body {
+    margin: 0;
+    padding: 0;
+}
 
 /****************** Шапка ******************/
 
@@ -18,6 +24,7 @@
     overflow: hidden;
     background-color: #1c1f1d;
     border-radius: 0.8vw;
+    margin: 0.9vw;
 }
 
 .topbar a {
@@ -81,8 +88,10 @@
 
     box-sizing: content-box;
     
-    margin-top: 1vw;
-    margin-bottom: 1vw;
+    /*margin-top: 1vw;
+    margin-bottom: 1vw;*/
+
+    margin: 0.8vw;
 
     padding: 0 2.9% 1vw 2.9%;
 
@@ -114,8 +123,9 @@
     display: flex;
     overflow: hidden;
     background-color: #1c1f1d;
-    border-radius: 0.8vw;
+/*    border-radius: 0.8vw;*/
     flex-direction: column;
+
 }
 
 .bottombar .discord-text {
@@ -175,7 +185,7 @@
 
 .discord-dd{
     width:500px;
-    height: 600px;
+    height: 300px;
     font-size: 7vw;
 }
 
@@ -201,7 +211,7 @@
 /*** Футер ***/
 .discord-dd{
     width:950px;
-    height: 1000px;
+    height: 500px;
     font-size: 7vw;
 }
 
@@ -223,7 +233,7 @@
     }
     .discord-dd{
         width: 550px;
-        height: 700px;
+        height: 350px;
         font-size: 7vw;
     }
 
@@ -270,7 +280,7 @@
     }
     .discord-dd{
         width: 350px;
-        height: 500px;
+        height: 250px;
         font-size: 7vw;
     }
 }
@@ -324,7 +334,7 @@
 }
 .discord-dd{
     width: 350px;
-    height: 500px;
+    height: 250px;
     font-size: 7vw;
 }
 }
@@ -380,7 +390,7 @@
 }
 .discord-dd{
     width: 250px;
-    height: 400px;
+    height: 200px;
     font-size: 7vw;
 }
 }
