--- a/files/styles/main.css
+++ b/files/styles/main.css
@@ -67,7 +67,7 @@ html, body {
 
 
 
-/******************* Основтой контент *******************/
+/******************* Основной контент *******************/
 
 .hand {
     cursor: pointer;
@@ -81,7 +81,7 @@ html, body {
     background-repeat: no-repeat;
 }
 
-.content{
+.content {
     display: flex;
 
     font-size: 3vw;
@@ -123,9 +123,7 @@ html, body {
     display: flex;
     overflow: hidden;
     background-color: #1c1f1d;
-/*    border-radius: 0.8vw;*/
     flex-direction: column;
-
 }
 
 .bottombar .discord-text {
@@ -189,6 +187,9 @@ html, body {
     font-size: 7vw;
 }
 
+
+/************ Моды/Файлы ************/
+
 .mod {
     display: flex;
     align-items: center;
@@ -197,6 +198,7 @@ html, body {
     padding: 1.2%;
 
     font-family: "pusia";
+    text-align: center;
 
     border-radius: 0.8vw;
 
@@ -206,8 +208,10 @@ html, body {
 }
 
 .mod img {
-    width: 5vw;
-    height: 5vw;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 .mod name {
     padding-top: 1.5vw;
@@ -249,40 +253,57 @@ html, body {
     background-color: cyan;
 }
 
+
 /******************* адаптация *******************/
 
 
 /******* под широкие мониторы *******/
+
 @media  only screen and (min-width : 1920px) and (max-width : 3840px) {
+
+
+    /*.mod img {
+        width: auto;
+        height: auto;
+    }*/
+
+    .mod name {
+        font-size: 3vw;
+    }
+
+    .mod description {
+        font-size: 2vw;
+    }
+
+    .mod a {
+        font-size: 1.8vw;
+    }
 
 
 
     /*** Основной контент ***/
 
-.background {
-    background-image: url('../images/background.jpg');
-    background-size: 100%;
+    .background {
+        background-image: url('../images/background.jpg');
+        background-size: 100%;
+    }
+
+
+    /*** Футер ***/
+
+    .discord-dd{
+        width:950px;
+        height: 500px;
+        font-size: 7vw;
+    }
+
 }
-
-
-/*** Футер ***/
-.discord-dd{
-    width:950px;
-    height: 500px;
-    font-size: 7vw;
-}
-
-
-
-}
-
-
-
 
 
 
 
 /******* под планшеты *******/
+
 @media  only screen and (min-width : 1000px) and (max-width : 1280px) {
     .background {
         background-image: url('../images/background.jpg');
@@ -294,7 +315,25 @@ html, body {
         font-size: 7vw;
     }
 
+    /*.mod img {
+        width: 7vw;
+        height: 7vw;
+    }*/
+
+    .mod name {
+        font-size: 5vw;
+    }
+
+    .mod description {
+        font-size: 3vw;
+    }
+
+    .mod a {
+        font-size: 2.5vw;
+    }
+
 }
+
 
 @media  only screen and (min-width : 721px) and (max-width : 999px) {
 
@@ -314,7 +353,22 @@ html, body {
     }
     
 
+    /*.mod img {
+        width: 8vw;
+        height: 8vw;
+    }*/
 
+    .mod name {
+        font-size: 6vw;
+    }
+
+    .mod description {
+        font-size: 4vw;
+    }
+
+    .mod a {
+        font-size: 3.5vw;
+    }
 
 
 /*** Футер ***/
@@ -342,112 +396,142 @@ html, body {
     }
 }
 
+
+
+
 /******* под смартфоны *******/
+
 @media  only screen and (min-width : 450px) and (max-width : 720px) {
     /***Шапка ***/
-.topbar  { 
-    flex-direction: column;
+    .topbar  { 
+        flex-direction: column;
+    }
+    .topbar a { 
+        font-size: 6vw;
+        border-left: 0px;
+        border-right: 0px;
+        border-bottom: 0.4vh dashed;
+    }
+
+    .topbar a:last-child {
+        border-bottom: initial;
+    }
+
+
+
+    /*** Основной контент ***/
+
+    .content{
+        font-size: 5vw;
+    }
+
+    /*.mod img {
+        width: 12vw;
+        height: 12vw;
+    }*/
+
+    .mod name {
+        font-size: 8vw;
+    }
+
+    .mod description {
+        font-size: 6vw;
+    }
+
+    .mod a {
+        font-size: 5vw;
+    }
+
+
+
+    /*** Футер ***/
+
+    .bottombar .discord-text {
+        font-size: 6vw;
+    }
+
+    .bottombar .discord-dd {
+        font-size: 5vw;
+    }
+
+    .bottombar .nko {
+        font-size: 5vw;
+    }
+
+    .bottombar .nkolink {
+        font-size: 6vw;
+    }
+
+    .discord-dd{
+        width: 350px;
+        height: 250px;
+        font-size: 7vw;
+    }
 }
-.topbar a { 
-    font-size: 6vw;
-    border-left: 0px;
-    border-right: 0px;
-    border-bottom: 0.4vh dashed;
-}
-
-.topbar a:last-child {
-    border-bottom: initial;
-}
-
-
-
- /*** Основтой контент ***/
-
-.content{
-    font-size: 5vw;
-}
-
-
-
-
-
-/*** Футер ***/
-.bottombar .discord-text {
-    font-size: 6vw;
-}
-
-.bottombar .discord-dd {
-    font-size: 5vw;
-    
-}
-
-.bottombar .nko {
-    font-size: 5vw;
-    
-}
-.bottombar .nkolink {
-    font-size: 6vw;
-    
-}
-.discord-dd{
-    width: 350px;
-    height: 250px;
-    font-size: 7vw;
-}
-}
-
-
-
-
 
 
 @media  only screen and (min-width : 270px) and (max-width : 449px) {
     /***Шапка ***/
-.topbar  { 
-    flex-direction: column;
-}
-.topbar a { 
-    font-size: 6vw;
-    border-left: 0px;
-    border-right: 0px;
-    border-bottom: 0.4vh dashed;
-}
+    .topbar  { 
+        flex-direction: column;
+    }
+    .topbar a { 
+        font-size: 6vw;
+        border-left: 0px;
+        border-right: 0px;
+        border-bottom: 0.4vh dashed;
+    }
 
-.topbar a:last-child {
-    border-bottom: initial;
-}
+    .topbar a:last-child {
+        border-bottom: initial;
+    }
 
- /*** Основтой контент ***/
+    /*** Основтой контент ***/
 
-.content {
-    font-size: 5vw;
-}
-
-
+    .content {
+        font-size: 5vw;
+    }
 
 
+    /*.mod img {
+        width: 15vw;
+        height: 15vw;
+    }*/
 
-/*** Футер ***/
-.bottombar .discord-text {
-    font-size: 6vw;
-}
+    .mod name {
+        font-size: 9vw;
+    }
 
-.bottombar .discord-dd {
-    font-size: 5vw;
-    
-}
+    .mod description {
+        font-size: 7vw;
+    }
 
-.bottombar .nko {
-    font-size: 5vw;
-    
-}
-.bottombar .nkolink {
-    font-size: 6vw;
-    
-}
-.discord-dd{
-    width: 250px;
-    height: 200px;
-    font-size: 7vw;
-}
+    .mod a {
+        font-size: 6vw;
+    }
+
+
+    /*** Футер ***/
+    .bottombar .discord-text {
+        font-size: 6vw;
+    }
+
+    .bottombar .discord-dd {
+        font-size: 5vw;
+    }
+
+    .bottombar .nko {
+        font-size: 5vw;
+    }
+
+    .bottombar .nkolink {
+        font-size: 6vw;
+    }
+
+    .discord-dd{
+        width: 250px;
+        height: 200px;
+        font-size: 7vw;
+    }
+
 }
